# spec2nexus

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  api.html  applications.html  changes.html  charts.html  conda-build.sh  contents.html  control_lines.html  create_release_notes.py  diffractometers.html  environment.yml  example_data.html  extractSpecScan.html  eznx.html  genindex.html  how_to_write_plugin.html  howto.html  index.html  install.html  libraries.html  license.html  objects.inv  packaging.md  plugin_core.html  publish.sh  py-modindex.html  pypi.bat  pyproject.toml  (+18 more)
.github/workflows/: ci.yml  code.yml  codeql.yml  docs.yml  publish-docs.yml  pypi.yml  python-package-conda.yml  sphinx-pages.yml  unit-tests-pytest.yml  upload_pypi.yml
_downloads/325b529982be819e0204ab826858e153/: CdSe
_downloads/61230b49621f29cf3bb1352aa6bcb5c9/: lmn40.spe
_downloads/a55bde47281cb37cae6eb9aa1c54020e/: uxml.xsd
_modules/: index.html
_modules/spec2nexus/: charts.html  diffractometers.html  extractSpecScan.html  eznx.html  nexus.html  plugin_core.html  scanf.html  singletons.html  spec.html  specplot.html  specplot_gallery.html  utils.html  writer.html
_sources/: api.rst.txt  applications.rst.txt  charts.rst.txt  contents.rst.txt  control_lines.rst.txt  diffractometers.rst.txt  example_data.rst.txt  how_to_write_plugin.rst.txt  howto.rst.txt  index.rst.txt  libraries.rst.txt  license.rst.txt  plugin_core.rst.txt  singletons.rst.txt  spec.rst.txt  spec2nexus.rst.txt  specplot.rst.txt  specplot_custom_scan_macro.rst.txt  specplot_gallery.rst.txt  unit_testing.rst.txt
_sources/nexus_layout/: basic_tree.rst.txt  comments.rst.txt  counters.rst.txt  example_1d_scan.rst.txt  index.rst.txt  mca.rst.txt  metadata.rst.txt  sample.rst.txt  spec_data_file.rst.txt  spec_scan.rst.txt  terms.rst.txt  unrecognized_content.rst.txt
_sources/supplied_plugins/: uim.rst.txt  uxml.rst.txt
_static/: documentation_options.js  pv_data.txt  pv_example.py
conda-recipe/: README.md  build.sh  meta.yaml  run_test.py
data/: APS_spec_data.hdf5  YSZ011_ALDITO_Fe2O3_planar_fired_1.spc
demo/: README.md  ascan.py  custom_a2scan_gallery.py  custom_ascan.py  usaxs.py  usaxs_flyscan.py  usaxs_uascan.py
docs/: Makefile  debug-sphinx-build.py  make.bat
docs/source/: api.rst  changes.rst  conf.py  contents.rst  converters.rst  example_data.rst  extractSpecScan.rst  eznx.rst  eznx_api_parser.rst  h5toText.rst  how_to_write_plugin.rst  index.rst  install.rst  license.rst  nexus_file_layout.rst  overview.rst  plugin.rst  plugin_core.rst  prjPySpec.rst  prjPySpec2eznx.rst  pySpec.rst  scanf.rst  spec.rst  spec2nexus.rst  specplot.rst  specplot_custom_scan_macro.rst  specplot_gallery.rst  tree_api_parser.rst  unit_testing.rst  utils.rst  writer.rst
nexus_layout/: basic_tree.html  comments.html  counters.html  example_1d_scan.html  general_tree.html  geometry.html  index.html  instrument.html  mca.html  metadata.html  positioners.html  sample.html  scan_data.html  spec_data_file.html  spec_scan.html  temperature.html  terms.html  unrecognized_content.html
spec2nexus/: __init__.py  charts.py  control_lines.py  diffractometers.py  extractSpecScan.py  eznx.py  eznx_example.py  nexus.py  plugin_core.py  scanf.py  singletons.py  spec.py  specplot.py  specplot_gallery.py  utils.py  writer.py
spec2nexus/data/: README.txt
spec2nexus/plugins/: apstools_specwriter.py  fallback.py  spec_common.py  uim.py  unicat.py  uxml.py  uxml.xsd
spec2nexus/tests/: _core.py  test_XPCS.py  test_control_lines.py  test_data_03_06_JanTest.py  test_diffractometers.py  test_extractSpecScan.py  test_eznx.py  test_issue107.py  test_issue119.py  test_issue123.py  test_issue128.py  test_issue161.py  test_issue188.py  test_issue191.py  test_issue216.py  test_issue230.py  test_issue267.py  test_issue64.py  test_issue8.py  test_issue99_hklscan.py  test_md_apstools_specwriter.py  test_multiple_headers.py  test_nexus.py  test_plugin.py  test_plugin_core.py  test_scanf.py  test_spec.py  test_specplot.py  test_specplot_gallery.py  test_utils.py  test_uxml.py  test_writer.py
src/spec2nexus/: VERSION  __init__.py  _requirements.py  _version.py  charts.py  cli.py  control_lines.py  converters.py  dev_cli.py  dev_datafile.py  dev_extractSpecScan.py  dev_h5toText.py  dev_nexus.py  dev_spec.py  dev_spec2nexus_cli.py  dev_testing.py  diffractometer-geometries.dict  diffractometers.py  extractSpecScan.py  eznx.py  eznx_api_parser.py  eznx_example.py  geo-work.py  geometries.txt  geometry.py  h5toText.py  nexus.py  plugin.py  plugin_core.py  prjPySpec.py  prjPySpec2eznx.py  pySpec.py  reshape.py  scanf.py  singletons.py  spec.py  spec2nexus_cli.py  specplot.py  specplot_files.py  specplot_gallery.py  (+14 more)
src/uxml/: runner.py  t1.xml  t3.xml  t4.xml  test_3.spec  test_4_uxml.xml  test_uxml.py  uxml.xsd  uxml_plugin.py
supplied_plugins/: XPCS.html  apstools_specwriter.html  fallback.html  spec_common.html  uim.html  unicat.html  uxml.html
tests/: __init__.py  __main__.py  _version_test.py  common.py  data_03_06_JanTest.py  dev_datafile.py  dev_extractSpecScan.py  issue107.py  issue119.py  issue123.py  issue128.py  issue161.py  issue188.py  issue191.py  issue216.py  issue64.py  issue8.py  issue99_hklscan.py  leak_check.py  test_XPCS.py  test_XPCSplugin.py  test_data_03_06_JanTest.py  test_diffractometers.py  test_extractSpecScan.py  test_eznx.py  test_issue107.py  test_issue119.py  test_issue123.py  test_issue128.py  test_issue161.py  test_issue188.py  test_issue191.py  test_issue216.py  test_issue64.py  test_issue8.py  test_issue99_hklscan.py  test_md_apstools_specwriter.py  test_multiple_headers.py  test_nexus.py  test_plugin.py  (+8 more)
tests/custom_plugins/: process_only_plugin.py  specfile.txt
tests/data/: JL124_1.spc  issue109_data.txt  issue196_data.txt  issue196_data2.txt  issue216_scan1.spec  issue64_data.txt  issue64_data_50.txt  n_m.txt  refresh1.txt  refresh2.txt  refresh3.txt  test_3_error.spec
tests/trial/: bacon.py  (+4 more)
(+122 files in other folders)
