[metadata]
description-file = README.md

[bdist_wheel]
universal=1

[egg_info]
tag_build = 
tag_date = false

[aliases]
release = egg_info -RDb ''

[versioneer]
VCS = git
style = pep440
versionfile_source = src/spec2nexus/_version.py
versionfile_build = spec2nexus/_version.py
tag_prefix =
parentdir_prefix = spec2nexus- 
